test/error/iocheck/err3.rzy
// Error: query is not allowed to write state

component
  Err3
    input
      query():R{0,100};
    
    output
      event();
    
    implementation hfsm(A)
    
    state A
      function query():R{0,100}
        event();
        return 0;
      end
    end
    
  end

